Updated files to point to my Docker Hub repo

--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    image: sbenhoff/docker-demo:v2
+    image: kslupsky/docker-demo:v2
     build:
       context: .
       dockerfile: Dockerfile
