--- a/k8s/app-deployment.yaml
+++ b/k8s/app-deployment.yaml
@@ -25,7 +25,7 @@ spec:
         - env:
             - name: DATABASE_URL
               value: postgres://user:password@db:5432/messages
-          image: sbenhoff/docker-demo:v3
+          image: kslupsky/docker-demo:v3
           name: app
           ports:
             - containerPort: 3000
